tests/sumo/spec/flow/errors/end_before_begin/errors.sumo
Error: Flow 'f1' ends before its begin time.
Quitting (on error).
